# ddl-injector

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DLL_PROXY_IMPLEMENTATION.md  DLL_PROXY_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  README.md  TESTING.md  UI_INTEGRATION_SUMMARY.md  build_release.bat  launch-ui.bat  launch-ui.ps1
.claude/: settings.local.json
.github/workflows/: test.yml
assets/: README.md
docs/: README.md  api-reference.md  architecture.md  development-guide.md  injection-methods.md  legal-disclaimer.md  project-review.md  troubleshooting.md  user-guide.md
docs/phases/: phase-00-documentation.md  phase-01-foundation.md  phase-02-process-enum.md  phase-03-basic-injection.md  phase-04-ui-foundation.md  phase-05-privileges.md  phase-06-manual-mapping.md  phase-07-advanced-methods.md  phase-08-config.md  phase-09-logging.md  phase-10-testing.md  phase-11-polish.md
injector-cli/: Cargo.toml
injector-cli/src/: main.rs
injector-core/: Cargo.toml
injector-core/examples/: README.md  basic_injection.rs  custom_injector.rs
injector-core/src/: error.rs  lib.rs
injector-core/src/injection/: create_remote_thread.rs  dll_proxy.rs  early_bird_apc.rs  manual_map.rs  mod.rs  nt_create_thread.rs  proxy_generator.rs  queue_user_apc.rs  reflective_loader.rs  section_mapping.rs  thread_hijacking.rs  traits.rs
injector-core/src/memory/: allocator.rs  mod.rs  reader.rs  writer.rs
injector-core/src/native/: mod.rs
injector-core/src/pe/: exceptions.rs  exports.rs  headers.rs  imports.rs  mod.rs  parser.rs  relocations.rs  sections.rs  tls.rs
injector-core/src/privilege/: manager.rs  mod.rs
injector-core/src/process/: context.rs  enumerator.rs  handle.rs  info.rs  mod.rs  thread.rs
injector-core/src/shellcode/: mod.rs  peb_walker.rs  reflective_stub.rs
injector-core/tests/: README.md  integration_test.rs
injector-ui/: Cargo.toml  build.rs  injector.exe.manifest  injector.rc
injector-ui/src/: app.rs  config.rs  logging.rs  main.rs
injector-ui/src/ui/: injection_panel.rs  log_viewer.rs  mod.rs  process_list.rs  settings.rs
test-dll/: Cargo.toml
test-dll/src/: lib.rs
