[package]
name = "injector-core"
version = "0.1.0"
edition = "2021"
authors = ["DLL Injector Contributors"]
description = "Multi-method DLL injection library for Windows with CreateRemoteThread, QueueUserAPC, NtCreateThreadEx, and Manual Map support"
repository = "https://github.com/username/dllInjector"
license = "MIT"
keywords = ["dll", "injection", "windows", "security", "debugging"]
categories = ["os::windows-apis", "development-tools::debugging"]
readme = "../README.md"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Kernel",
] }
thiserror = "2.0"
log = "0.4"

[dev-dependencies]
tempfile = "3.8"
env_logger = "0.11"
