[package]
name = "injector-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "injector"
path = "src/main.rs"

[dependencies]
injector-core = { path = "../injector-core" }
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
env_logger = "0.11"
log = "0.4"
